hphp/hack/test/typecheck/const_visibility.php.exp
File "const_visibility.php", line 4, characters 3-8:
Constants cannot be declared private (Parsing[1002])
