hphp/hack/test/typecheck/const_visibility.php
<?hh // partial

class MyClass {
  private const MY_CONSTA = 'a';
  private const string MY_CONSTB = 'b';
}
